2009-07-07  Kenichi Handa  <handa@m17n.org>

	* .gdbinit (xcharset): Fix the treating of $arg0.

	* character.h (unibyte_has_multibyte_table): Delete extern.
	(UNIBYTE_CHAR_HAS_MULTIBYTE_P): Delete it.
	(charset_unibyte_decoder): Extern it.
	(DECODE_UNIBYTE): New macro.

	* charset.c (Fset_charset_priority): Update charset_unibyte and
	charset_unibyte_decoder.
	(init_charset_once): Initialize charset_unibyte_decoder.
	(syms_of_charset): Initialize charset_unibyte.

	* character.c (unibyte_has_multibyte_table): Delete it.
	(charset_unibyte_decoder): New variable.
	(multibyte_char_to_unibyte): Use CHAR_TO_BYTE8 instead of checking
	charset_unibyte.
	(multibyte_char_to_unibyte_safe): Likewise.
	(Funibyte_char_to_multibyte): Don't check charset_unibyte.

	* xdisp.c (get_next_display_element): Use DECODE_BYTE.
	(x_produce_glyphs): Likewise.

2009-07-03  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (Ffile_attributes): Decode user and group name by the
	locale's encoding.  (Bug#3443)

2009-07-03  Kenichi Handa  <handa@m17n.org>

	* font.c (font_entity_vector_cache): New variable.
	(syms_of_font): Initialize it.
	(font_concat_entities): New function.
	(font_list_entities): Use font_concat_entities instead of
	Fvconcat.

	* fontset.c (fontset_find_font): Re-order a fallback font-group.
	(fontset_font): Treat return value t of fontset_find_font as a
	sign of no-font in that fontset, not as a sign of no-font
	anywhere.

2009-07-01  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* Makefile.in (SOME_MACHINE_LISP): Add ../lisp/term/common-win.elc.

2009-06-30  Chong Yidong  <cyd@stupidchicken.com>

	* xftfont.c (xftfont_open): Avoid passing NULL argument to
	XftLockFace.

2009-06-28  David Reitter <david.reitter@gmail.com>

	* nsterm.m (keydown): Avoid infinite loop.

2009-06-28  Andreas Schwab  <schwab@linux-m68k.org>

	* process.c (send_process): Keep decoded string in a local
	variable and protect it from GC.  (Bug#3521)

2009-06-28  Eli Zaretskii  <eliz@gnu.org>
