@@ -1,3 +1,7 @@
+2009-07-07  Chong Yidong  <cyd@stupidchicken.com>
+
+	* fileio.c (Fsubstitute_in_file_name): Copy string data properly.
+
 2009-07-07  Kenichi Handa  <handa@m17n.org>
 
 	* .gdbinit (xcharset): Fix the treating of $arg0.
